ncc/testsuite/positive/std-macros.n
using System.Console;

[Record]
class A
{
  public Prop1  : int    { get; set; }
  public Field1 : int;
  public Prop2  : string { get; set; }
}

module Program
{
  Main() : void
  {
    def a = A(1, 2, "a");
    WriteLine($"a.Prop1=$(a.Prop1) a.Field1=$(a.Field1) a.Prop2=$(a.Prop2)");
    //_ = ReadLine();
  }
}

/*
BEGIN-OUTPUT
a.Prop1=1 a.Field1=2 a.Prop2=a
END-OUTPUT
*/ 