ncc/testsuite/negative/Issue-1052.n
using System;

class A[T]
{
  protected static F(_ : T) : void
  {
    Console.WriteLine(typeof(A[T]));  
  }
}

class B : A[int]
{
  public static G() : void
  {
    F(1.1) // E: in argument \#1 .* needed a int\,.*got double\: System\.Double is not a subtype of System.Int32 \[simple require\]
   }
}

module Program
{
  Main() : void
  {
    B.G();
  }
}

/*
BEGIN-OUTPUT
END-OUTPUT
*/
